GERONIMO-6204 Decouple OpenWebBeans from web container
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@1196032 13f79535-47bb-0310-9956-ffa450edef68